tanzu-java-web-app.dev-ns.tap/routes/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: tanzu-java-web-app-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-tanzu-java-web-app
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: tanzu-java-web-app
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
